--- a/code/outliers.ipynb
+++ b/code/outliers.ipynb
@@ -350,13 +350,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": null,
    "id": "8b7b546e",
    "metadata": {},
    "outputs": [],
    "source": [
-    "train.to_csv('pp_train.csv', index=False)\n",
-    "test.to_csv('pp_test.csv', index=False)"
+    "# train.to_csv('pp_train.csv', index=False)\n",
+    "# test.to_csv('pp_test.csv', index=False)"
    ]
   },
   {
